# Mesh-Ferrofluid

./: .gitignore  .gitmodules  readme.md  requirements.txt
demo/: demo_3d_mesh_droplet.py  demo_BEAST.py  demo_Helmholtz_MOM_2d.py  demo_Helmholtz_MOM_3d.py  demo_Helmholtz_WOB_3d.py  demo_Helmholtz_bempp.py  demo_Laplace_2d.py  demo_Laplace_3d.py  demo_mesh_to_sdf.py  demo_ray_query.py  demo_remeshing.py  demo_sdf_to_mesh.py  generate_in_file.py  orexin_pupil_CEBRA.py  orexin_pupil_CEBRA_multisession_decoding.py
src/mesh_BEM/: __init__.py  abstract_BEM_solver.py  kernel_functions.py  mesh_BEM_solver_2d.py  mesh_BEM_solver_3d.py
src/mesh_BEM/cuda/: mesh_MOM_3d.cpp  mesh_MOM_3d.cu
src/mesh_BEM/double_layer/: abstract_double_layer.py  double_layer_2d.py  double_layer_3d.py
src/mesh_BEM/hypersingular_layer/: __init__.py  abstract_hypersingular_layer.py  hypersingular_layer_2d.py  hypersingular_layer_3d.py
src/mesh_BEM/rhs_layer/: __init__.py  abstract_rhs_layer.py  rhs_layer_2d.py  rhs_layer_3d.py
src/mesh_BEM/single_layer/: abstract_single_layer.py  single_layer_2d.py  single_layer_3d.py
src/mesh_BEM/utils/: __init__.py  integrations_2d.py  integrations_3d.py
src/mesh_WOB/: WOB_solver_2d.py  WOB_solver_3d.py  __init__.py  abstract_WOB_solver.py
src/mesh_ferrofluid/: __init__.py  mesh_Hemholtz_decomposition.py  mesh_advection.py  mesh_pressure.py
src/simulation/: __init__.py  simulation.py
src/utils/: BEM_utils.py  __init__.py  functions.py  global_variables.py  grid.py  io.py  logger.py  mesh_utils.py  plot.py  render_utils.py  types.py
src/vulkan_ray_tracing/: CMakeLists.txt  VulkanRayQuery.cp39-win_amd64.pyd  build_linux.sh  build_linux_again.sh  build_windows.cmd  build_windows_again.cmd  helper.hpp  main.cpp  pybind.cpp  ray_query_App.hpp  readme.md
src/vulkan_ray_tracing/shaders/: closesthit.rchit  host_device.h  miss.rmiss  raycommon.glsl  raygen.rgen
src/vulkan_ray_tracing/spv/: closesthit.spv  miss.spv  raygen.spv
